[trySbeEngine only] $lookup+$unwind pushdown does not track QSN Node Ids correctly

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 8.0.16
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • 0

      While investigating a failure, catalin.sumanaru@mongodb.com discovered that When pushing down a $lookup + $unwind in trySbeEngine mode, the QSN tree keeps an extra UnwindNode here that is not explicitly part of the QSN tree. This node does not get assigned a nodeId, which causes problems later on with plan caching.

      This is only possible to hit in trySbeEngine mode, so it should not affect any users running in standard/supported configurations.

            Assignee:
            Ian Boros
            Reporter:
            Ian Boros
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: