SERVER-105708 Fix correctness bug for SBE plans involving $lookup and $unwind on empty collections (#36712)

GitOrigin-RevId: 9e6670c32c45d9c3e4226feeb495567d3146cd1b