src/mongo/db/query/stage_builder/sbe/tests/sbe_builder_test.cpp
@@ -551,9 +551,7 @@ TEST_F(GoldenSbeStageBuilderTest, TestUnwind) {
     boost::optional<FieldPath> fp = boost::none;
     auto unwindNode = std::make_unique<UnwindNode>(
         std::make_unique<VirtualScanNode>(docs, VirtualScanNode::ScanType::kCollScan, false),
-        "a"_sd,
-        true,
-        fp);
+        UnwindNode::UnwindSpec{"a"_sd, true, fp});
     runTest(std::move(unwindNode), BSON_ARRAY(BSON("a" << 1) << BSON("a" << 2) << BSON("a" << 3)));
 }
 
@@ -562,9 +560,7 @@ TEST_F(GoldenSbeStageBuilderTest, TestUnwindIndexPath) {
     boost::optional<FieldPath> fp = FieldPath("idx");
     auto unwindNode = std::make_unique<UnwindNode>(
         std::make_unique<VirtualScanNode>(docs, VirtualScanNode::ScanType::kCollScan, false),
-        "a"_sd,
-        true,
-        fp);
+        UnwindNode::UnwindSpec{"a"_sd, true, fp});
     runTest(std::move(unwindNode),
             BSON_ARRAY(BSON("a" << 1 << "idx" << 0)
                        << BSON("a" << 2 << "idx" << 1) << BSON("a" << 3 << "idx" << 2)));
@@ -576,9 +572,7 @@ TEST_F(GoldenSbeStageBuilderTest, TestUnwindIndexPathConflict) {
     boost::optional<FieldPath> fp = FieldPath("a.idx");
     auto unwindNode = std::make_unique<UnwindNode>(
         std::make_unique<VirtualScanNode>(docs, VirtualScanNode::ScanType::kCollScan, false),
-        "a.val"_sd,
-        true,
-        fp);
+        UnwindNode::UnwindSpec{"a.val"_sd, true, fp});
     runTest(std::move(unwindNode),
             BSON_ARRAY(BSON("a" << BSON("val" << 1 << "idx" << 0))
                        << BSON("a" << BSON("val" << 2 << "idx" << 1))
